@@ -9,8 +9,9 @@ import org.apache.logging.log4j.Logger;
 import java.io.File;
 import java.io.IOException;
 import java.util.Arrays;
-import java.util.HashSet;
 import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 public class FileIsReader {
 
@@ -22,9 +23,11 @@ public class FileIsReader {
         try {
             List<String> stringOutput = FileUtils.readLines(file);
             String result = StringUtils.join(stringOutput, " ");
-            String[] arrayListWords = StringUtils.split(result, " ");
-            HashSet<String> stringsByWords = new HashSet<>(Arrays.asList(arrayListWords));
-            FileUtils.writeStringToFile(new File("src/main/resources/FileForWriter.txt"), String.valueOf(stringsByWords.size()));
+            List<String> listWords = List.of(StringUtils.split(result, " "));
+
+            //использование конвейрного stream(1)
+            List<String> resultListWords = listWords.stream().distinct().collect(Collectors.toList());
+            FileUtils.writeStringToFile(new File("src/main/resources/FileForWriter.txt"), String.valueOf(resultListWords.size()));
 
         } catch (IOException e) {
             e.printStackTrace();
@@ -32,20 +35,20 @@ public class FileIsReader {
 
     }
 
-    public static void reverseReaderfile() {
+    public static void reverseReaderFile() {
         File file = new File("src/main/resources/FileForReader.txt");
         try {
             List<String> stringOutput = FileUtils.readLines(file);
             String result = StringUtils.join(stringOutput, " ");
 
             //использование собственного функционального интерфейса MReverse
-            MReverse<String> reverseresult = (str) -> {
+            MReverse<String> reverseResult = (str) -> {
                 String result2 = "";
                 for (int i = str.length() - 1; i >= 0; i--)
                     result2 += str.charAt(i);
                 return result2;
             };
-            LOGGER.info("Reversed string = " + reverseresult.reverse(result));
+            LOGGER.info("Reversed string = " + reverseResult.reverse(result));
         } catch (IOException e) {
             e.printStackTrace();
         }
